--- a/packages/api-contract/package.json
+++ b/packages/api-contract/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "api-contract",
-  "version": "2.22.1",
+  "name": "@chainx/api-contract",
+  "version": "2.22.2",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@chainx/types": "^2.22.1",
-    "@chainx/util": "^2.22.0",
+    "@chainx/types": "^2.22.2",
+    "@chainx/util": "^2.22.2",
     "rxjs": "^6.5.3"
   }
 }
