--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:unit": "NODE_ENV= jest --testPathIgnorePatterns e2e",
     "build:metadata": "babel-node ./scripts/metadataJsonWrite",
     "build:rpc": "babel-node ./scripts/rpcJsonWrite",
-    "release": "yarn build && lerna publish --registry=https://registry.npmjs.org/"
+    "release": "yarn build && lerna publish --registry=https://registry.npmjs.org/",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "workspaces": [
     "packages/*"
@@ -24,6 +26,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "chalk": "^2.4.2",
+    "core-js": "^3.2.1",
     "execa": "^1.0.0",
     "glob": "^7.1.3",
     "husky": "^2.3.0",
@@ -35,8 +38,8 @@
     "prettier": "^1.15.3",
     "regenerator-runtime": "^0.13.1",
     "rimraf": "^2.6.3",
-    "yargs": "^13.2.4",
-    "core-js": "^3.2.1"
+    "vuepress": "^1.4.0",
+    "yargs": "^13.2.4"
   },
   "husky": {
     "hooks": {
