--- a/example/package.json
+++ b/example/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@polkadot/api": "0.90.0-beta.22",
+    "@chainx/api": "*",
     "rxjs": "^6.5.2",
     "tweetnacl": "^1.0.1"
+  },
+  "devDependencies": {
+    "rimraf": "^2.6.2"
   }
 }
